Ticket: #FT-297 SubTicket: # Component: Changes: 1. Update some styles. 2. Fix a bug that collapse the navigation bar, the layout of calendar view messed up.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/page.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/page.less
@@ -744,3 +744,11 @@ body {
 		height: 100%;
 	}
 }
+
+.k-state-selected, .k-state-selected:link, .k-state-selected:visited, .k-list > .k-state-selected,
+.k-list > .k-state-highlight, .k-panel > .k-state-selected, .k-ghost-splitbar-vertical, .k-ghost-splitbar-horizontal,
+.k-draghandle.k-state-selected:hover, .k-scheduler .k-scheduler-toolbar .k-state-selected,
+.k-scheduler .k-today.k-state-selected, .k-marquee-color {
+	background-color: @systemColor;
+	border-color: @systemColor;
+}
